--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
-    "stripe": "^18.5.0",
     "react-player": "^3.3.3",
+    "sonner": "^2.0.7",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.7"
   },
